<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.seatgeek.placesautocomplete.PlacesAutocompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/fromEdit"
                    android:hint="@string/address"
                    app:pacv_googleMapsApiKey="AIzaSyBh17UNyS_mYGF4_WZ143VWSxgQJ0Zg3lE"
                    android:layout_weight="1" />

                <ImageView
                    app:srcCompat="@drawable/map_marker"
                    android:id="@+id/currentLocationBtn"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:layout_width="48dp"
                    android:layout_height="48dp" />

            </LinearLayout>

            <TextView
                android:text="@string/to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight="1" />

            <com.seatgeek.placesautocomplete.PlacesAutocompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/toEdit"
                android:hint="@string/address"
                app:pacv_googleMapsApiKey="AIzaSyBh17UNyS_mYGF4_WZ143VWSxgQJ0Zg3lE" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@+id/carRadio"
                android:id="@+id/transportMeanRadio"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bikeRadio"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/bike"
                    android:paddingLeft="@dimen/margin_radio_left"
                    android:paddingRight="@dimen/margin_radio_right" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/busRadio"
                    android:backgroundTint="@color/unselected"
                    android:drawableLeft="@drawable/bus"
                    android:paddingLeft="@dimen/margin_radio_left"
                    android:paddingRight="@dimen/margin_radio_right" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/carRadio"
                    android:drawableLeft="@drawable/car"
                    android:paddingLeft="@dimen/margin_radio_left"
                    android:paddingRight="@dimen/margin_radio_right" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/walkRadio"
                    android:backgroundTint="@color/unselected"
                    android:drawableLeft="@drawable/walk"
                    android:paddingLeft="@dimen/margin_radio_left"
                    android:paddingRight="@dimen/margin_radio_right" />
            </RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center_vertical|center_horizontal">

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/distanceTV"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/txt_large"
                    android:textStyle="normal|bold"
                    android:gravity="end" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/durationTV"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:gravity="start"
                    android:textSize="20dp" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/showRoute"
                    android:src="@drawable/google_maps"
                    android:background="@null"
                    android:padding="@dimen/activity_vertical_margin" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center_vertical|center_horizontal">

                <Button
                    android:text="@string/calculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/calculateBtn"
                    android:layout_weight="1"
                    android:background="@null" />

                <ImageButton
                    android:text="@string/save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/content_save"
                    android:id="@+id/savebtn"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_vertical_margin"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>